--- a/charts/containersensor/templates/containerSensor-secret.yaml
+++ b/charts/containersensor/templates/containerSensor-secret.yaml
@@ -11,5 +11,9 @@ metadata:
     {{ .Values.containerSensor.annotations | toYaml }}
   {{- end }}
 data:
-  token: {{ .Values.darktraceToken | b64enc }}
+  {{- if .Values.containerSensor.secret.overrideValue }}
+  token: {{ .Values.containerSensor.secret.overrideValue | b64enc }}
+  {{- else }}
+  token: {{ .Values.vSensorHmacKey | b64enc }}
+  {{- end }}
 {{- end }}
