--- a/charts/containersensor/templates/containerSensor-clusterrole.yaml
+++ b/charts/containersensor/templates/containerSensor-clusterrole.yaml
@@ -11,6 +11,12 @@ metadata:
   {{- end }}
 rules:
 - apiGroups: [""]
-  resources: ["pods", "services"]
+  resources: ["pods", "services", "replicationcontrollers"]
+  verbs: ["get", "watch", "list"]
+- apiGroups: ["apps"]
+  resources: ["deployments", "statefulsets", "replicasets", "daemonsets"]
+  verbs: ["get", "watch", "list"]
+- apiGroups: ["batch"]
+  resources: ["jobs", "cronjobs"]
   verbs: ["get", "watch", "list"]
 {{- end }}
