--- a/charts/containersensor/templates/containerSensor-deployment.yaml
+++ b/charts/containersensor/templates/containerSensor-deployment.yaml
@@ -31,6 +31,10 @@ spec:
       tolerations:
         {{- . | toYaml | nindent 6 }}
       {{- end }}
+      {{- with .Values.containerSensor.affinity }}
+      affinity:
+        {{- . | toYaml | nindent 6 }}
+      {{- end }}
       serviceAccountName: darktrace-containersensor
       automountServiceAccountToken: true
       volumes:
